--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
 body {background-color:tan;}
-h1{color:green;}
+h1 {color:grey;
+	font-family:verdana;}
+div.maindiv {
+	background-color: white; 
+	border-radius: 25px;
+	font-family: arial;
+	color: black; 
+	width: 300px;
+	padding: 20px;
+	margin: auto;
+}
 
 
