--- a/style.css
+++ b/style.css
@@ -11,4 +11,18 @@ div.maindiv {
 	margin: auto;
 }
 
+div.row {
+	padding: 0 9px 10px 10px;
+	
+}
 
+label {
+	width: 30%;
+	display: inline-block;
+	text-align: left;
+}
+
+input[list]{
+    display: inline-block;
+    width: 60%;
+}
